[package]
name = "mustachers"
version = "0.1.0"
edition = "2021"
authors = ["Sam French"]
publish = false

[lib]
crate-type = ["cdylib"]
name = "mustachers"

[dependencies]
magnus = { version = "0.4" }
mustache = "0.9"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
debug = false
incremental = false
